force-app/main/default/objects/Contact/fields/Is_Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Prescriber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prescriber</label>
    <type>Checkbox</type>
</CustomField>