force-app/main/default/objects/Contact/fields/Key_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Key_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check off if this person is a key advocate of your products</inlineHelpText>
    <label>Key Advocate</label>
    <type>Checkbox</type>
</CustomField>