force-app/main/default/objects/Contact/fields/KOL_box__c.field-meta.xml
<CustomField>
    <fullName>KOL_box__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if this is a Key Opinion Leader</inlineHelpText>
    <label>KOL</label>
    <type>Checkbox</type>
</CustomField>