force-app/main/default/objects/Contact/fields/KOL_Speaker__c.field-meta.xml
<CustomField>
    <fullName>KOL_Speaker__c</fullName>
    <description>VOD - SR-00003487 - formula to check if the contact is KOL or Speaker</description>
    <formula>IF( OR(KOL_box__c,Speaker_Oncology__c), 
    "TRUE",
    "FALSE")</formula>
    <label>KOL/Speaker</label>
    <type>Text</type>
</CustomField>