force-app/main/default/objects/Contact/fields/NPI_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NPI_Lookup__c</fullName>
    <formula>HYPERLINK("https://npiregistry.cms.hhs.gov/registry/search-results-table?" &amp; "first_name=" &amp;  FirstName &amp; "&amp;last_name=" &amp;  LastName , "NPI Registry")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPI Lookup</label>
    <type>Text</type>
</CustomField>