force-app/main/default/objects/Contact/fields/ONC_Specialty_Prime__c.field-meta.xml
<CustomField>
    <fullName>ONC_Specialty_Prime__c</fullName>
    <label>ONC Specialty Prime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BMT</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>HEM</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>Pharm</fullName>
            </value>
            <value>
                <fullName>PHO</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>