force-app/main/default/objects/Contact/fields/Oncology_Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>Oncology_Professional_Designation__c</fullName>
    <label>Professional Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PharmD</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>RPH</fullName>
            </value>
            <value>
                <fullName>MD PhD</fullName>
            </value>
            <value>
                <fullName>FNP</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>