force-app/main/default/objects/Contact/fields/Oncology_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Oncology_Specialties__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Adult Hem/Onc</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>BMT</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Neuro-Onc</fullName>
            </value>
            <value>
                <fullName>Neuro-Surg</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatric Hem/Onc</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>RadOnc</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Nephrologist</fullName>
            </value>
            <value>
                <fullName>Ophthalmologist</fullName>
            </value>
            <value>
                <fullName>Immunologist</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>HEM</fullName>
            </value>
            <value>
                <fullName>HEM ONC</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IMU</fullName>
            </value>
            <value>
                <fullName>NEPH</fullName>
            </value>
            <value>
                <fullName>ONC</fullName>
            </value>
            <value>
                <fullName>PED</fullName>
            </value>
            <value>
                <fullName>PED GI</fullName>
            </value>
            <value>
                <fullName>PED HEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>