force-app/main/default/objects/Contact/fields/Speaker_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Expertise__c</fullName>
    <inlineHelpText>Select one or more areas of expertise for this speaker</inlineHelpText>
    <label>Speaker Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PEDS</fullName>
            </value>
            <value>
                <fullName>AYA</fullName>
            </value>
            <value>
                <fullName>ADULT</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>