force-app/main/default/objects/Contact/fields/Speaker_Oncology__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Oncology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>