force-app/main/default/objects/Contact/fields/Speaker_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Training_Completed__c</fullName>
    <label>Speaker Training Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>