force-app/main/default/objects/Contact/fields/State_Medical_License_No__c.field-meta.xml
<CustomField>
    <fullName>State_Medical_License_No__c</fullName>
    <externalId>true</externalId>
    <label>State Medical License No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>