force-app/main/default/objects/Contact/fields/Stay_In_Front_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Stay_In_Front_Speciality__c</fullName>
    <label>Stay In Front Specialty</label>
    <length>5</length>
    <type>Text</type>
</CustomField>