force-app/main/default/objects/Contact/recordTypes/Rare_Disease_Contact.recordType-meta.xml
<RecordType>
    <fullName>Rare_Disease_Contact</fullName>
    <active>true</active>
    <description>Rare Disease Contact Record</description>
    <label>Rare Disease Contact</label>
    
</RecordType>