force-app/main/default/objects/Contact/recordTypes/Speaker.recordType-meta.xml
<RecordType>
    <fullName>Speaker</fullName>
    <active>true</active>
    <description>Speaker Record.</description>
    <label>Speaker</label>
    
</RecordType>